fix: homepage margin & visibility
- always bring in homepage

--- a/app/stylus/mutants-layout.styl
+++ b/app/stylus/mutants-layout.styl
@@ -41,7 +41,7 @@ html.forum .homepage .forum > .title
 html.homepage, html.forum
   .main-content
     .forum.homepage
-      margin-top 69px
+      margin-top 0
       .post
         margin-bottom (grid*2)
         .body
