--- a/app/stylus/mutants-theme.styl
+++ b/app/stylus/mutants-theme.styl
@@ -122,6 +122,7 @@ html.forum, html.profile, html.search, html.moderation
         list-style-type none
         border-top 1px solid transparent
         border-left 2px solid transparent
+        border-bottom 1px solid transparent
         border-right 2px solid #fff
         transition box-shadow .3s ease-in .05s
         &:hover
@@ -177,7 +178,7 @@ html.forum, html.profile, html.search, html.moderation
         &:before
           width 5px
           background-color dark_theme_color
-          top -2px
+          top -1px
           bottom -2px
         // {{{ active thread arrow
         .arrow
